Fix lang-info-long text not completely visible
Problem only on small window width.

--- a/style.css
+++ b/style.css
@@ -122,9 +122,22 @@ body::before {
   align-items: center;
   position: relative;
 }
+.about-grid > div {
+  min-width: 0;
+}
 @media (min-width: 768px) {
   .about-grid {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+#lang-info-long {
+  text-align: center;
+}
+@media (min-width: 768px) {
+  #lang-info-long {
+    text-align: start;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .about-image-container {
